--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -6,14 +6,15 @@
 <!-- load bootstrap and font-awesome  -->
 <link rel="stylesheet" href="static/css/bootstrap/3.3.7/bootstrap.min.css" />
 <link rel="stylesheet" href="static/css/font-awesome/4.6.3/font-awesome.min.css" />
-
+<link rel="stylesheet" href="static/css/app.css" />
 
 <!-- load angular and angular route -->
 <script
 	src="static/js/angularjs/1.5.0/angular.min.js"></script>
 <script
 	src="static/js/angularjs/1.5.0/angular-route.min.js"></script>
-
+<script src="static/js/angular-ui/0.2.18/angular-ui-router.js"></script>
+<script src="static/js/angularjs/1.5.0/angular-resource.min.js"></script>
 <!-- load application specific script -->
 <script src="static/js/app.js"></script>
 <script src="static/js/constants.js"></script>
@@ -40,10 +41,13 @@
 	</header>
 
 	<!-- MAIN CONTENT AND INJECTED VIEWS -->
-	<div id="main">
-		<!--  This is where content will be injected -->
-		<div ng-view></div>
-	</div>
+	<div class="container">
+      <div class="row top-buffer">
+        <div class="col-xs-8 col-xs-offset-2">
+          <div ui-view></div> <!-- This is where our views will load -->
+        </div>
+      </div>
+    </div>
 
 </body>
 </html>
