--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,22 +4,22 @@
 <head>
 <title>RYDE</title>
 <!-- load bootstrap and font-awesome  -->
-<link rel="stylesheet" href="static/css/bootstrap/3.3.7/bootstrap.min.css" />
-<link rel="stylesheet" href="static/css/font-awesome/4.6.3/font-awesome.min.css" />
-<link rel="stylesheet" href="static/css/app.css" />
+<link rel="stylesheet" href="css/bootstrap/3.3.7/bootstrap.min.css" />
+<link rel="stylesheet" href="css/font-awesome/4.6.3/font-awesome.min.css" />
+<link rel="stylesheet" href="css/app.css" />
 
 <!-- load angular and angular route -->
 <script
-	src="static/js/angularjs/1.5.0/angular.min.js"></script>
+	src="js/angularjs/1.5.0/angular.min.js"></script>
 <script
-	src="static/js/angularjs/1.5.0/angular-route.min.js"></script>
-<script src="static/js/angular-ui/0.2.18/angular-ui-router.js"></script>
-<script src="static/js/angularjs/1.5.0/angular-resource.min.js"></script>
+	src="js/angularjs/1.5.0/angular-route.min.js"></script>
+<script src="js/angular-ui/0.2.18/angular-ui-router.js"></script>
+<script src="js/angularjs/1.5.0/angular-resource.min.js"></script>
 <!-- load application specific script -->
-<script src="static/js/app.js"></script>
-<script src="static/js/constants.js"></script>
-<script src="static/js/controllers.js"></script>
-<script src="static/js/services.js"></script>
+<script src="js/app.js"></script>
+<script src="js/constants.js"></script>
+<script src="js/controllers.js"></script>
+<script src="js/services.js"></script>
 </head>
 <body>
 
